# SlackRtm

./: .CWebSocket.cpp.kate-swp  .gitignore  .gitmodules  CLogging.cpp  CMakeLists.txt  CSlackRTM.cpp  CSlackRTM.h  CSlackWS.cpp  CSlackWeb.cpp  CSlackWeb.h  CWebSocket.cpp  CWebSocket.h  Makefile  README.md  SlackRTMCallbackInterface.h  Vagrantfile  main.cpp
cmake/: LibraryConfig.cmake  SetEnv.cmake
cpp/: CSlackRTM.cpp  CSlackWS.cpp  CSlackWeb.cpp  CWebSocket.cpp  main.cpp  ws_test.cpp
examples/minimal/: CMakeLists.txt  Makefile  main.cpp
examples/mqtt/: CMakeLists.txt  Makefile  main.cpp
include/: CLogging.h  CSlackRTM.h  CSlackWS.h  CSlackWeb.h  CWebSocket.h  SlackRTMCallbackInterface.h
slackrtm/: CMakeLists.txt  CSlackRTM.cpp  CSlackRTM.h  CSlackWS.cpp  CSlackWS.h  CSlackWeb.cpp  CSlackWeb.h  CWebSocket.cpp  CWebSocket.h  slackrtm.h
slackrtm/include/: SlackRTMCallbackInterface.h  slackrtm.h
